chore: added new references, refactor: fixed minor css issue on story 1

--- a/public/Resources/Resources.html
+++ b/public/Resources/Resources.html
@@ -33,30 +33,23 @@
   <main>
     <center>
       <div class="content_box">
-        <div class="dialogue_box">
-          <a target="_blank" href="https://www.medialit.org/reading-room/language-media-literacy-glossary-terms">
-            <button class="butt fades_in">
-              Language of Media Literacy: A Glossary of Terms
+        <div class="resources-content">
+          <a target="_blank" href="https://www.image-line.com/edu-licenses/">
+            <button class="butt-main fades_in">
+            FL Studio - Academic and Educational Licenses 
             </button>
           </a>
           <br /><br />
           <a target="_blank"
-            href="https://kidslox.com/guide-to/social-media-literacy/#:~:text=Online%20etiquette%3A%20Children%20should%20understand,avoiding%20offensive%20or%20derogatory%20comments.">
-            <button class="butt fades_in">
-              What is social media literacy and why is it important?
+            href="https://www.image-line.com/fl-studio-learning/fl-studio-online-manual/html/app_copyright.htm">
+            <button class="butt-main fades_in">
+              FL Studio - Online Manual (Copyright Content)
             </button>
           </a>
           <br /><br />
-          <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2704015/ ">
-            <button class="butt fades_in">
-              The Impact of Electronic Media Violence: Scientific Theory and Research
-            </button>
-          </a>
-          <br /><br />
-          <a target="_blank"
-            href="https://www.westernsydney.edu.au/__data/assets/pdf_file/0007/1824640/Australian_adult_media_literacy_report_2021.pdf">
-            <button class="butt fades_in">
-              Adult Media Literacy in Australia: Attitudes, Experiences and Needs
+          <a target="_blank" href="https://www.image-line.com/image-line-software-eula/">
+            <button class="butt-main fades_in">
+              FL Studio - Image Line Terms of Use
             </button>
           </a>
           <br /><br />
