Removed some files and partial

--- a/public/Story1/Scene1.4.html
+++ b/public/Story1/Scene1.4.html
@@ -19,7 +19,7 @@
     <main>
       <center>
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/dad.jpg" alt="" />
+          <img class="img_main" src="../../Assets/Story1/video_call.jpg" alt="Virtual Classroom" />
           <div class="dialogue_box">
             <p
               class="fades_in"
