--- a/public/Story1/Scene1.3.html
+++ b/public/Story1/Scene1.3.html
@@ -21,8 +21,8 @@
         <div class="content_box">
           <img
             class="img_main"
-            src="../../Assets/Story1/councelor.jpg"
-            alt=""
+            src="../../Assets/Story1/Beatrix.jpg"
+            alt="Beatrix"
           />
           <div class="dialogue_box">
             <!--  -->
