--- a/public/Story1/Scene2.1.html
+++ b/public/Story1/Scene2.1.html
@@ -29,7 +29,7 @@ CONTENT BOX
 -->
         <h1 style="letter-spacing: 0.5rem; font-size: 3rem">FREEWARE FOREST</h1>
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/mom_door.jpg" alt="" />
+          <img class="img_main" src="../../Assets/Story1/forest.jpg" alt="" />
           <!-- 
 ======================================================================================
 DIALOGUE BOX
