--- a/public/Story2/Scene1.0.html
+++ b/public/Story2/Scene1.0.html
@@ -31,7 +31,7 @@ CONTENT BOX
           TRIAL TREACHEROUS LANDS
         </h1>
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/mom_door.jpg" alt="" />
+          <img class="img_main" src="../../Assets/Story1/badlands.jpg" alt="Treacherous Lands" />
           <!-- 
 ======================================================================================
 DIALOGUE BOX
