--- a/public/Story3/Scene1.01.html
+++ b/public/Story3/Scene1.01.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="../../src/style.css" />
     <link rel="icon" type="image/png" href="../../Assets/404.png" />
-
+    
     <title>Scene 1.0</title>
 
     <style>
@@ -38,6 +38,8 @@ CONTENT BOX
 ======================================================================================
 -->
         <div class="content_box">
+          <img class="img_main" src="../../Assets/Story1/PaidPeaks.jpeg" alt="" />
+          
           <!-- 
 ======================================================================================
 DIALOGUE BOX
