--- a/public/Story2/Scene1.2.html
+++ b/public/Story2/Scene1.2.html
@@ -21,7 +21,7 @@
         <div class="content_box">
           <img
             class="img_main"
-            src="../../Assets/Story1/mom_sad.jpg"
+            src="../../Assets/Story1/fairy.jpg"
             alt="sad mom"
           />
           <div class="dialogue_box">
