--- a/public/Story2/Scene2.1.html
+++ b/public/Story2/Scene2.1.html
@@ -28,7 +28,7 @@ CONTENT BOX
 ======================================================================================
 -->
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/mom_door.jpg" alt="" />
+          <img class="img_main" src="../../Assets/Story1/fairy.jpg" alt="" />
           <!-- 
 ======================================================================================
 DIALOGUE BOX
@@ -53,7 +53,10 @@ DIALOGUE BOX
               do so. No one needs to know that you are violating the terms of
               use.
             </p>
-            <h1>Do you want to know how?</h1>
+            <h1
+            class="fades_in"
+            style="animation: fadeIn 1s ease-in-out forwards 3.5s"
+            >Do you want to know how?</h1>
             <!--  -->
           </div>
         </div>
