--- a/public/Story2/Scene3.0.html
+++ b/public/Story2/Scene3.0.html
@@ -30,7 +30,7 @@ CONTENT BOX
         <div class="content_box">
           <img
             class="img_main"
-            src="../../Assets/Story1/child_angry.jpg"
+            src="../../Assets/Story1/Beatrix.jpg"
             alt=""
           />
           <!-- 
