refactor: added backgrounds to the scenes and added a missing image in one of the scenes

--- a/public/Story1/Scene1.3.html
+++ b/public/Story1/Scene1.3.html
@@ -19,11 +19,14 @@
     <main>
       <center>
         <div class="content_box">
-          <img
-            class="img_main"
-            src="../../Assets/Story1/Beatrix.jpg"
-            alt="Beatrix"
-          />
+          <div style="display: flex; justify-content: center; gap: 20px;">
+            <img class="img_main" src="../../Assets/Story1/main-char.jpg" alt="Main Character"> &nbsp;
+            <img
+              class="img_main"
+              src="../../Assets/Story1/Beatrix.jpg"
+              alt="Beatrix"
+            />
+          </div>
           <div class="dialogue_box">
             <!--  -->
             <p
