--- a/public/Story1/Scene2.2.html
+++ b/public/Story1/Scene2.2.html
@@ -30,7 +30,7 @@ CONTENT BOX
         <div class="content_box">
           <img
             class="img_main"
-            src="../../Assets/Story1/child_angry.jpg"
+            src="../../Assets/Story1/video_call.jpg"
             alt=""
           />
           <!-- 
@@ -59,20 +59,26 @@ DIALOGUE BOX
           <a href="../Story2/Scene1.0.html">
             <button
               class="butt-main"
-              style="animation: fadeIn 2s ease-in-out forwards 2.5s; background-color: green;"
+              style="
+                animation: fadeIn 2s ease-in-out forwards 2.5s;
+                background-color: green;
+              "
             >
               Continue?
             </button> </a
           ><a href="./Scene2.3.html">
             <button
               class="butt-main"
-              style="animation: fadeIn 2s ease-in-out forwards 2.5s;
-              background-color: crimson;"
+              style="
+                animation: fadeIn 2s ease-in-out forwards 2.5s;
+                background-color: crimson;
+              "
             >
               Cancel?
             </button>
           </a>
         </div>
+        <img class="background" src="../../Assets/Story1/forest.jpg" alt="" />
         <!-- 
 ======================================================================================
 NEXT BUTTON
