--- a/public/Story2/Scene1.1.html
+++ b/public/Story2/Scene1.1.html
@@ -19,7 +19,11 @@
     <main>
       <center>
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/video_call.jpg" alt="Virtual Classroom" />
+          <img
+            class="img_main"
+            src="../../Assets/Story1/video_call.jpg"
+            alt="Virtual Classroom"
+          />
           <div class="dialogue_box">
             <p
               class="fades_in"
@@ -39,6 +43,7 @@
               will be yours. And remember, violating any licensing terms.
             </p>
           </div>
+          <img class="background" src="../../Assets/Story1/badlands.jpg" alt="" />
         </div>
         <a href=" Scene1.2.html">
           <button
