--- a/public/Story2/Scene1.2.html
+++ b/public/Story2/Scene1.2.html
@@ -66,6 +66,7 @@
             </button>
           </a>
         </div>
+        <img class="background" src="../../Assets/Story1/badlands.jpg" alt="" />
         <!-- 
 ======================================================================================
 NEXT BUTTON
