--- a/public/Story2/Scene2.1.html
+++ b/public/Story2/Scene2.1.html
@@ -59,6 +59,7 @@ DIALOGUE BOX
             >Do you want to know how?</h1>
             <!--  -->
           </div>
+          <img class="background" src="../../Assets/Story1/badlands.jpg" alt="" />
         </div>
         <!-- 
 ======================================================================================
