--- a/public/Story2/Scene2.2.html
+++ b/public/Story2/Scene2.2.html
@@ -79,6 +79,7 @@ DIALOGUE BOX
             </button>
           </a>
         </div>
+        <img class="background" src="../../Assets/Story1/badlands.jpg" alt="" />
         <!-- 
 ======================================================================================
 NEXT BUTTON
