--- a/public/Story2/Scene3.0.html
+++ b/public/Story2/Scene3.0.html
@@ -57,6 +57,7 @@ DIALOGUE BOX
             </p>
             <!--  -->
           </div>
+          <img class="background" src="../../Assets/Story1/badlands.jpg" alt="" />
         </div>
         <!-- 
 ======================================================================================
