--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img class="img_main" src="Assets/404.png" alt="">
         <div class="dialogue_box">
           <a href="public/Story1/Scene1.0.html">
-            <button class="butt-main">Story 1</button>
+            <button class="butt-main">Let's Get Started!</button>
           </a>
           <br /><br />
           <a href="public/Resources/Resources.html">
