--- a/public/Story1/Scene1.5.html
+++ b/public/Story1/Scene1.5.html
@@ -44,6 +44,7 @@
             </p>
             <!--  -->
           </div>
+          <img class="background" src="../../Assets/Story1/rpg grass.jpg" alt="" />
         </div>
         <a href="Scene2.1.html">
           <button
