--- a/public/Story2/Scene1.0.html
+++ b/public/Story2/Scene1.0.html
@@ -31,7 +31,11 @@ CONTENT BOX
           TRIAL TREACHEROUS LANDS
         </h1>
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/badlands.jpg" alt="Treacherous Lands" />
+          <img
+            class="img_main"
+            src="../../Assets/Story1/badlands.jpg"
+            alt="Treacherous Lands"
+          />
           <!-- 
 ======================================================================================
 DIALOGUE BOX
@@ -52,10 +56,9 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 2.5s"
             >
-            In the Trial Treacherous
-            Lands, you face treacherous challenges related to time-limited
-            trials. To continue, you must wisely allocate your trial period,
-            exploring and experimenting with FL Studio's advanced features.
+              In the Trial Treacherous Lands, you'll navigate time-limited
+              challenges, allocating your trial period wisely to explore FL
+              Studio's advanced features.
             </p>
             <div>
               <!--IMAGES OF THE DIFFERENCES BETWEEN DEMO AND FULL VERSIONS-->
