refactor: fixed minor css issues, chore: finished the script's final part

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <main>
     <center>
       <div class="content_box">
-        <img class="img_main" src="Assets/404.png" alt="">
+        <div style="display: flex; justify-content: center;">
+          <img class="img_main" src="Assets/404.png" alt="">
+        </div>
         <div class="dialogue_box">
           <a href="public/Story1/Scene1.0.html">
             <button class="butt-main">Let's Get Started!</button>
