--- a/public/Story1/Scene1.0.html
+++ b/public/Story1/Scene1.0.html
@@ -44,6 +44,7 @@
             all about software licensing.
           </p>
         </div>
+        <img class="background" src="../../Assets/Story1/wood.webp" alt="" />
       </div>
       <a href=" Scene1.1.html">
         <button class="butt fades_in" style="animation: fadeIn 2s ease-in-out forwards 2.5s;">
