--- a/public/Story1/Scene1.3.html
+++ b/public/Story1/Scene1.3.html
@@ -45,6 +45,7 @@
               challenge you to understand and apply your TFL knowledge.
             </p>
           </div>
+          <img class="background" src="../../Assets/Story1/wood.webp" alt="" />
         </div>
         <a href=" Scene1.4.html">
           <button
