--- a/public/Story1/Scene1.4.html
+++ b/public/Story1/Scene1.4.html
@@ -45,6 +45,7 @@
               <strong style="font-size: 50px">THE QUEST BEGINS!</strong>
             </p>
           </div>
+          <img class="background" src="../../Assets/Story1/rpg grass.jpg" alt="" />
         </div>
         <a href=" Scene1.5.html">
           <button
