--- a/public/Story3/Scene1.01.html
+++ b/public/Story3/Scene1.01.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="../../src/style.css" />
     <link rel="icon" type="image/png" href="../../Assets/404.png" />
-    
+
     <title>Scene 1.0</title>
 
     <style>
@@ -38,8 +38,12 @@ CONTENT BOX
 ======================================================================================
 -->
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/PaidPeaks.jpeg" alt="" />
-          
+          <img
+            class="img_main"
+            src="../../Assets/Story1/PaidPeaks.jpeg"
+            alt=""
+          />
+
           <!-- 
 ======================================================================================
 DIALOGUE BOX
@@ -61,14 +65,8 @@ DIALOGUE BOX
             >
               Here, you face challenges that test your understanding of
               licensing rights, the number of installations allowed, and the
-              importance of respecting intellectual property.
-            </p>
-            <!--  -->
-            <p
-              class="fades_in"
-              style="animation: fadeIn 2s ease-in-out forwards 2.5s"
-            >
-              Solve these challenges to unlock powerful features and plugins.
+              importance of respecting intellectual property. Solve these
+              challenges to unlock powerful features and plugins.
             </p>
             <!--  -->
           </div>
@@ -78,7 +76,7 @@ DIALOGUE BOX
 NEXT BUTTON
 ======================================================================================
 -->
-        <a href="../../index.html">
+        <a href="../Story4/Scene1.0.html">
           <button
             class="butt fades_in"
             style="animation: fadeIn 2s ease-in-out forwards 3.5s"
