--- a/public/Story4/Scene1.0.html
+++ b/public/Story4/Scene1.0.html
@@ -14,6 +14,7 @@
   <!-- _____________________________________________ -->
 
   <body>
+    <header></header>
     <!-- 
 ======================================================================================
 MAIN
@@ -26,9 +27,13 @@ MAIN
 CONTENT BOX
 ======================================================================================
 -->
-        <h1 style="letter-spacing: 0.5rem; font-size: 3rem">FREEWARE FOREST</h1>
+        <h1 style="letter-spacing: 0.5rem; font-size: 3rem">FINAL BOSS BATTLE</h1>
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/forest.jpg" alt="" />
+          <img
+            class="img_main"
+            src="../../Assets/Story1/final-boss.jpeg"
+            alt=""
+          />
           <!-- 
 ======================================================================================
 DIALOGUE BOX
@@ -40,18 +45,12 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 0.5s"
             >
-              Craft a musical piece within the constraints of the demo version
-              features in <strong>"Freeware Forest"</strong>, exploring its limited but tantalizing
-              capabilities to create a unique melody.
+              The final challenge involves composing a collaborative song with
+              other virtual students, each using different FL Studio versions.
+              You must navigate licensing restrictions, communication barriers,
+              and creative differences to produce a harmonious and ethical piece
             </p>
             <!--  -->
-            <p
-              class="fades_in"
-              style="animation: fadeIn 1s ease-in-out forwards 2.5s"
-            >
-              As you progress, you unlock knowledge about the differences
-              between the demo and full versions.
-            </p>
             <div>
               <!--IMAGES OF THE DIFFERENCES BETWEEN DEMO AND FULL VERSIONS-->
             </div>
@@ -64,10 +63,10 @@ DIALOGUE BOX
 NEXT BUTTON
 ======================================================================================
 -->
-        <a href="Scene2.2.html">
+        <a href="./Scene1.2.html">
           <button
             class="butt fades_in"
-            style="animation: fadeIn 2s ease-in-out forwards 3.5s"
+            style="animation: fadeIn 2s ease-in-out forwards 1.5s"
           >
             >
           </button>
