--- a/public/Story4/Scene1.2.html
+++ b/public/Story4/Scene1.2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../src/style.css" />
     <link rel="icon" type="image/png" href="../../Assets/404.png" />
 
-    <title>Scene 1.1</title>
+    <title>Scene 1.3</title>
   </head>
   <!-- _____________________________________________ -->
 
@@ -19,30 +19,31 @@
     <main>
       <center>
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/video_call.jpg" alt="Virtual Classroom" />
+          <div style="display: flex; justify-content: center; gap: 20px">
+            <img
+              class="img_main"
+              src="../../Assets/Story1/cooking-bro.webp"
+              alt="Main Character"
+              style="width: 299px; height: 200px;"
+            />
+            &nbsp;
+            <img
+              class="img_main"
+              src="../../Assets/Story1/clock.gif"
+              alt="Beatrix"
+            />
+          </div>
           <div class="dialogue_box">
-            <p
-              class="fades_in"
-              style="animation: fadeIn 2s ease-in-out forwards 0.5s"
-            >
-              The game begins with you in your virtual classroom, attending a
-              lecture by Professor Spark on responsible ICT use.
-            </p>
-            <p
-              class="fades_in"
-              style="animation: fadeIn 2s ease-in-out forwards 1.5s"
-            >
-              He introduces FL Studio as a practical tool to explore licensing,
-              ethical content creation, and collaboration. Intrigued, you
-              approach your AI tutor, Beatrix.
-            </p>
+            <h1 style="font-size: 50px; width: 100%">
+              BRO IS COOKING SOMETHING!
+            </h1>
           </div>
           <img class="background" src="../../Assets/Story1/wood.webp" alt="" />
         </div>
-        <a href=" Scene1.2.html">
+        <a href=" Scene1.3.html">
           <button
             class="butt fades_in"
-            style="animation: fadeIn 1.5s ease-in-out forwards 2.5s"
+            style="animation: fadeIn 2s ease-in-out forwards 2.5s"
           >
             >
           </button>
