--- a/public/Story4/Scene1.3.html
+++ b/public/Story4/Scene1.3.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../src/style.css" />
     <link rel="icon" type="image/png" href="../../Assets/404.png" />
 
-    <title>Scene 1.1</title>
+    <title>Scene 1.3</title>
   </head>
   <!-- _____________________________________________ -->
 
@@ -19,30 +19,43 @@
     <main>
       <center>
         <div class="content_box">
-          <img class="img_main" src="../../Assets/Story1/video_call.jpg" alt="Virtual Classroom" />
+          <div style="display: flex; justify-content: center; gap: 20px">
+            <img
+              class="img_main"
+              src="../../Assets/Story1/main-char.jpg"
+              alt="Main Character"
+            />
+            &nbsp;
+            <img
+              class="img_main"
+              src="../../Assets/Story1/video_call.jpg"
+              alt="Beatrix"
+            />
+          </div>
           <div class="dialogue_box">
+            <!--  -->
             <p
               class="fades_in"
               style="animation: fadeIn 2s ease-in-out forwards 0.5s"
             >
-              The game begins with you in your virtual classroom, attending a
-              lecture by Professor Spark on responsible ICT use.
+              Upon success, you celebrate your newfound understanding of FL
+              Studio, software licensing, and responsible ICT use.
             </p>
             <p
               class="fades_in"
               style="animation: fadeIn 2s ease-in-out forwards 1.5s"
             >
-              He introduces FL Studio as a practical tool to explore licensing,
-              ethical content creation, and collaboration. Intrigued, you
-              approach your AI tutor, Beatrix.
+              Professor Spark commends your journey and emphasizes that
+              technology is a tool, and it's up to you to use it consciously and
+              ethically.
             </p>
           </div>
           <img class="background" src="../../Assets/Story1/wood.webp" alt="" />
         </div>
-        <a href=" Scene1.2.html">
+        <a href="../TheEnd.html">
           <button
             class="butt fades_in"
-            style="animation: fadeIn 1.5s ease-in-out forwards 2.5s"
+            style="animation: fadeIn 2s ease-in-out forwards 2.5s"
           >
             >
           </button>
