--- a/index.html
+++ b/index.html
@@ -1,55 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<!-- _____________________________________________ -->
+  <!-- _____________________________________________ -->
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width = device-width, initial-scale = 1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width = device-width, initial-scale = 1.0" />
 
-  <link rel="stylesheet" href="src/style.css">
-  <style>
-    .butt {
-      animation: fadeIn 1s ease-in-out forwards .5s;
-    }
+    <link rel="stylesheet" href="src/style.css" />
+    <style>
+      .butt {
+        animation: fadeIn 1s ease-in-out forwards 0.5s;
+      }
 
-    .dialogue_box {
-      margin-top: 50px;
-      text-align: center;
-    }
-  </style>
+      .dialogue_box {
+        margin-top: 50px;
+        text-align: center;
+      }
+    </style>
 
-  <title>Our Stories</title>
-  <link rel="icon" type="image/png" href="Assets/404.png" />
-</head>
-<!-- _____________________________________________ -->
+    <title>Our Stories</title>
+    <link rel="icon" type="image/png" href="Assets/404.png" />
+  </head>
+  <!-- _____________________________________________ -->
 
-<body>
-  <header>
-  </header>
-  <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ -->
-  <main>
-    <center>
-      <div class="content_box">
-        <div style="display: flex; justify-content: center;">
-          <img class="img_main" src="Assets/404.png" alt="">
+  <body>
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ -->
+    <main>
+      <center>
+        <div class="main-menu">
+          <div style="display: flex; justify-content: center">
+            <img class="image" src="Assets/Story1/main-menu-bg.jpg" alt="" />
+          </div>
+          <img
+            class="img_main"
+            src="Assets/Story1/main-menu.jpg"
+            alt="Main Character"
+          />
+          <h1 class="title">FL Studio: The Quest for Conscious Creation</h1>
+          <div class="dialogue_box">
+            <a href="public/Story1/Scene1.0.html">
+              <button class="butt-main">Let's Get Started!</button>
+            </a>
+            <br /><br />
+            <a href="public/Resources/Resources.html">
+              <button class="butt-main">References</button>
+            </a>
+          </div>
         </div>
-        <div class="dialogue_box">
-          <a href="public/Story1/Scene1.0.html">
-            <button class="butt-main">Let's Get Started!</button>
-          </a>
-          <br /><br />
-          <a href="public/Resources/Resources.html">
-            <button class="butt-main">References</button>
-          </a>
-        </div>
-      </div>
-    </center>
-
-  </main>
-  <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ -->
-  <footer>
-  </footer>
-</body>
-<!-- _____________________________________________ -->
-
+      </center>
+    </main>
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ -->
+    <footer></footer>
+  </body>
+  <!-- _____________________________________________ -->
 </html>
