--- a/public/Story1/Scene1.2.html
+++ b/public/Story1/Scene1.2.html
@@ -33,13 +33,13 @@
                 text-align: center;
               "
             >
-              Beatrix: Greetings! How can I assist you today?
+              BEATRIX: Greetings! How can I assist you today?
             </p>
             <p
               class="fades_in"
               style="animation: fadeIn 2s ease-in-out forwards 1.5s"
             >
-              You: I'm curious about FL Studio and how it connects to the TFL
+              YOU: I'm curious about FL Studio and how it connects to the TFL
               course. Professor Spark mentioned it, but I'd love to delve
               deeper.
             </p>
@@ -47,7 +47,7 @@
               class="fades_in"
               style="animation: fadeIn 2s ease-in-out forwards 2.5s"
             >
-              Beatrix: Excellent choice! FL Studio is a powerful music
+              BEATRIX: Excellent choice! FL Studio is a powerful music
               production software packed with learning opportunities. Tell me,
               what specifically interests you?
             </p>
