--- a/public/Story1/Scene1.3.html
+++ b/public/Story1/Scene1.3.html
@@ -33,14 +33,14 @@
               class="fades_in"
               style="animation: fadeIn 2s ease-in-out forwards 0.5s"
             >
-              You: I'm fascinated by the software licensing aspect. Can I
+              YOU: I'm fascinated by the software licensing aspect. Can I
               actually experience different licensing models within FL Studio?
             </p>
             <p
               class="fades_in"
               style="animation: fadeIn 2s ease-in-out forwards 1.5s"
             >
-              Beatrix: Absolutely! We can embark on a quest to unlock various FL
+              BEATRIX: Absolutely! We can embark on a quest to unlock various FL
               Studio versions, each with unique licensing terms. Each level will
               challenge you to understand and apply your TFL knowledge.
             </p>
