--- a/public/Story1/Scene1.4.html
+++ b/public/Story1/Scene1.4.html
@@ -28,21 +28,21 @@
                 text-align: center;
               "
             >
-              Professor Spark (appearing virtually): Ah, a quest you say? Sounds
+              PROFESSOR SPARK (appearing virtually): Ah, a quest you say? Sounds
               intriguing! Remember, young Padawan, ethical use of technology is
               not just about software, but also about the message you create.
             </p>
             <p
               class="fades_in"
-              style="animation: fadeIn 2s ease-in-out forwards 2.5s"
+              style="animation: fadeIn 2s ease-in-out forwards 1.5s"
             >
-              You: Thanks, Professor! I'm ready for the challenge!
+              YOU: Thanks, Professor! I'm ready for the challenge!
             </p>
             <p
               class="fades_in"
-              style="animation: fadeIn 2s ease-in-out forwards 4.5s"
+              style="animation: fadeIn 2s ease-in-out forwards 2.5s"
             >
-              <strong style="font-size: 50px">THE QUEST BEGINS!</strong>
+              <strong style="font-size: 50px; color: yellow;">THE QUEST BEGINS!</strong>
             </p>
           </div>
           <img class="background" src="../../Assets/Story1/rpg grass.jpg" alt="" />
