--- a/public/Story1/Scene2.2.html
+++ b/public/Story1/Scene2.2.html
@@ -44,7 +44,7 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 0.5s"
             >
-              Professor Spark: Would you like to continue on your journey to the
+              PROFESSOR SPARK: Would you like to continue on your journey to the
               FL Studio realm or go back and cancel your quest?
             </p>
             <!--  -->
@@ -56,7 +56,7 @@ DIALOGUE BOX
             </p>
             <!--  -->
           </div>
-          <a href="../Story2/Scene1.0.html">
+          <a href="../Story1/Scene2.4.html">
             <button
               class="butt-main"
               style="
