--- a/public/Story2/Scene1.0.html
+++ b/public/Story2/Scene1.0.html
@@ -47,7 +47,7 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 0.5s"
             >
-              Professor Spark: Congratulations! You cleared your first task, but
+              PROFESSOR SPARK: Congratulations! You cleared your first task, but
               don't be hasty, there are more to uncover. Follow me as we move
               forward to the <strong>"Trial Treacherous Lands".</strong>
             </p>
