--- a/public/Story2/Scene1.1.html
+++ b/public/Story2/Scene1.1.html
@@ -29,7 +29,7 @@
               class="fades_in"
               style="animation: fadeIn 2s ease-in-out forwards 0.5s"
             >
-              Professor Spark: Before you move on, I forgot to mention. Since
+              PROFESSOR SPARK: Before you move on, I forgot to mention. Since
               this is a challenge, you won't be given the standard trial period
               which is a month. Instead I will cut it short to make it exciting.
               A minute!
