--- a/public/Story2/Scene1.2.html
+++ b/public/Story2/Scene1.2.html
@@ -33,7 +33,7 @@
                 text-align: center;
               "
             >
-              Fairy: Hello Traveler, I'm the known as the FL Studio fairy, I am an
+              FAIRY: Hello Traveler, I'm the known as the FL Studio fairy, I am an
               expert with its features.
             </p>
             <p
