--- a/public/Story2/Scene2.1.html
+++ b/public/Story2/Scene2.1.html
@@ -40,7 +40,7 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 0.5s"
             >
-              Fairy: Now I don't usually share this trick to others but since
+              FAIRY: Now I don't usually share this trick to others but since
               you are working on a time restriction I will share this
               information.
             </p>
