--- a/public/Story2/Scene3.0.html
+++ b/public/Story2/Scene3.0.html
@@ -44,7 +44,7 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 0.5s"
             >
-              Beatrix: That was a very brave decision. I'm glad you chose the
+              BEATRIX: That was a very brave decision. I'm glad you chose the
               right way, Now go and continue your task while you still have time
               left.
             </p>
