--- a/public/Story3/Scene1.00.html
+++ b/public/Story3/Scene1.00.html
@@ -41,7 +41,7 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 0.5s"
             >
-              Professor Spark: Another job well done! Since you have
+              PROFESSOR SPARK: Another job well done! Since you have
               successfully managed to finish the challenges for the Freeware
               Forest and the Trial Treacherous Lands, it's time for you to go
               through the 
