--- a/public/Story3/Scene1.02.html
+++ b/public/Story3/Scene1.02.html
@@ -6,10 +6,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width = device-width, initial-scale = 1.0" />
 
-    <link rel="icon" type="image/png" href="../../Assets/404.png" />
-    <title>Scene 2.2</title>
-
     <link rel="stylesheet" href="../../src/style.css" />
+    <link rel="icon" type="image/png" href="../../Assets/404.png" />
+
+    <title>Scene 1.0</title>
+
+    <style>
+      .dialogue_box {
+        padding: 0px 0px 20px;
+      }
+
+      .dialogue_box p {
+        text-indent: 40px;
+      }
+    </style>
   </head>
   <!-- _____________________________________________ -->
 
@@ -28,11 +38,20 @@ CONTENT BOX
 ======================================================================================
 -->
         <div class="content_box">
-          <img
-            class="img_main"
-            src="../../Assets/Story1/Beatrix.jpg"
-            alt=""
-          />
+          <div style="display: flex; justify-content: center; gap: 20px">
+            <img
+              class="img_main"
+              src="../../Assets/Story1/main-char.jpg"
+              alt="Main Character"
+            />
+            &nbsp;
+            <img
+              class="img_main"
+              src="../../Assets/Story1/Beatrix.jpg"
+              alt="Beatrix"
+            />
+          </div>
+
           <!-- 
 ======================================================================================
 DIALOGUE BOX
@@ -42,22 +61,36 @@ DIALOGUE BOX
             <!--  -->
             <p
               class="fades_in"
-              style="animation: fadeIn 1s ease-in-out forwards 0.5s"
+              style="animation: fadeIn 2s ease-in-out forwards 0.5s"
             >
-              BEATRIX: Stop! You don't want to use methods that violate the
-              terms of use. I know you are working on a limited time but there
-              are more ethical ways to finish the task.
+              YOU: I think I should just get a pirated version of this app, the
+              price is just ridiculous for me.
             </p>
             <!--  -->
             <p
               class="fades_in"
-              style="animation: fadeIn 1s ease-in-out forwards 1.5s"
+              style="animation: fadeIn 2s ease-in-out forwards 1.5s"
             >
-              *DO YOU STILL WANT TO CONTINUE*
+              BEATRIX: Do that and you will be breaking the EULA of FL Studio
+              and will therefore be charged with DMCA or copyright strikes. This
+              can imprison you for 1 - 9 years and be fined for over 1.5 million
+              dollars more or less.
+            </p>
+            <!--  -->
+            <p
+              class="fades_in"
+              style="animation: fadeIn 2s ease-in-out forwards 2.5s"
+            >
+              *would you want that?*
             </p>
             <!--  -->
           </div>
-          <a href="../Story2/Scene1.0.html">
+          <img
+            class="background"
+            src="../../Assets/Story1/PaidPeaks.jpeg"
+            alt=""
+          />
+          <a href="../Story3/Scene1.03.html">
             <button
               class="butt-main"
               style="
@@ -65,9 +98,9 @@ DIALOGUE BOX
                 background-color: green;
               "
             >
-              Of course, lol?
+              Yes
             </button> </a
-          ><a href="./Scene3.0.html">
+          ><a href="./Scene1.04.html">
             <button
               class="butt-main"
               style="
@@ -75,11 +108,10 @@ DIALOGUE BOX
                 background-color: crimson;
               "
             >
-              Nah, I'm angel?
+              No
             </button>
-          </a>
+          </a>  
         </div>
-        <img class="background" src="../../Assets/Story1/badlands.jpg" alt="" />
         <!-- 
 ======================================================================================
 NEXT BUTTON
