--- a/public/Story3/Scene1.04.html
+++ b/public/Story3/Scene1.04.html
@@ -13,7 +13,7 @@
 
     <style>
       .dialogue_box {
-        padding: 0px 0px 50px;
+        padding: 0px 0px 20px;
       }
 
       .dialogue_box p {
@@ -38,11 +38,19 @@ CONTENT BOX
 ======================================================================================
 -->
         <div class="content_box">
-          <img
-            class="img_main"
-            src="../../Assets/Story1/PaidPeaks.jpeg"
-            alt=""
-          />
+          <div style="display: flex; justify-content: center; gap: 20px">
+            <img
+              class="img_main"
+              src="../../Assets/Story1/main-char.jpg"
+              alt="Main Character"
+            />
+            &nbsp;
+            <img
+              class="img_main"
+              src="../../Assets/Story1/Beatrix.jpg"
+              alt="Beatrix"
+            />
+          </div>
 
           <!-- 
 ======================================================================================
@@ -55,35 +63,47 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 2s ease-in-out forwards 0.5s"
             >
-              As you enter the Paid Paradise, you are now equipped with a
-              licensed version of FL Studio.
+              BEATRIX: Wise choice as always. Don’t worry, Prof Spark has given
+              us some cash to at least use their recommended edition, the
+              Producer’s Choice. Enjoy the power of… <strong>GOING PRO!</strong>
             </p>
             <!--  -->
             <p
               class="fades_in"
               style="animation: fadeIn 2s ease-in-out forwards 1.5s"
             >
-              Here, you face challenges that test your understanding of
-              licensing rights, the number of installations allowed, and the
-              importance of respecting intellectual property. Solve these
-              challenges to unlock powerful features and plugins.
+              *The protagonist is shown all the features and content accessible
+              to those who use the paid version of FL Studio*
             </p>
             <!--  -->
+            <p
+              class="fades_in"
+              style="animation: fadeIn 2s ease-in-out forwards 2.5s"
+            >
+              YOU: Wow, I have never experienced such luxury before. I can’t
+              wait to finally get enough to purchase this app’s most powerful
+              edition in the future.
+            </p>
           </div>
+          <img
+            class="background"
+            src="../../Assets/Story1/PaidPeaks.jpeg"
+            alt=""
+          />
         </div>
+        <a href="../Story4/Scene1.0.html">
+          <button
+            class="butt fades_in"
+            style="animation: fadeIn 1.5s ease-in-out forwards 2.5s"
+          >
+            >
+          </button>
+        </a>
         <!-- 
 ======================================================================================
 NEXT BUTTON
 ======================================================================================
 -->
-        <a href="../Story3/Scene1.02.html">
-          <button
-            class="butt fades_in"
-            style="animation: fadeIn 2s ease-in-out forwards 3.5s"
-          >
-            >
-          </button>
-        </a>
       </center>
     </main>
     <!-- 
