--- a/public/Story1/Scene2.4.html
+++ b/public/Story1/Scene2.4.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width = device-width, initial-scale = 1.0" />
 
     <link rel="icon" type="image/png" href="../../Assets/404.png" />
-    <title>Scene 2.2</title>
+    <title>Scene 2.4</title>
 
     <link rel="stylesheet" href="../../src/style.css" />
   </head>
@@ -44,42 +44,37 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 0.5s"
             >
-              BEATRIX: Stop! You don't want to use methods that violate the
-              terms of use. I know you are working on a limited time but there
-              are more ethical ways to finish the task.
+              BEATRIX: Great choice Traveler! Now because you chose to continue
+              I will be here to assist you with your task so that you can move
+              forward.
             </p>
-            <!--  -->
             <p
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 1.5s"
             >
-              *DO YOU STILL WANT TO CONTINUE*
+              The screen will show the free FL studio workspace and try to
+              compose a short piece using limited features offered for the demo
+              version.
+            </p>
+            <!--  -->
+            <p
+              class="fades_in"
+              style="animation: fadeIn 1s ease-in-out forwards 2.5s"
+            >
+              *Creates something using a free version of FL studio*
             </p>
             <!--  -->
           </div>
-          <a href="../Story2/Scene1.0.html">
-            <button
-              class="butt-main"
-              style="
-                animation: fadeIn 2s ease-in-out forwards 2.5s;
-                background-color: green;
-              "
-            >
-              Of course, lol?
-            </button> </a
-          ><a href="./Scene3.0.html">
-            <button
-              class="butt-main"
-              style="
-                animation: fadeIn 2s ease-in-out forwards 2.5s;
-                background-color: crimson;
-              "
-            >
-              Nah, I'm angel?
-            </button>
-          </a>
         </div>
-        <img class="background" src="../../Assets/Story1/badlands.jpg" alt="" />
+        <a href="Scene2.5.html">
+          <button
+            class="butt fades_in"
+            style="animation: fadeIn 2s ease-in-out forwards 3.5s"
+          >
+            >
+          </button>
+        </a>
+        <img class="background" src="../../Assets/Story1/forest.jpg" alt="" />
         <!-- 
 ======================================================================================
 NEXT BUTTON
