--- a/public/Story1/Scene2.5.html
+++ b/public/Story1/Scene2.5.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width = device-width, initial-scale = 1.0" />
 
     <link rel="icon" type="image/png" href="../../Assets/404.png" />
-    <title>Scene 2.2</title>
+    <title>Scene 2.5</title>
 
     <link rel="stylesheet" href="../../src/style.css" />
   </head>
@@ -28,11 +28,19 @@ CONTENT BOX
 ======================================================================================
 -->
         <div class="content_box">
-          <img
-            class="img_main"
-            src="../../Assets/Story1/Beatrix.jpg"
-            alt=""
-          />
+          <div style="display: flex; justify-content: center; gap: 20px">
+            <img
+              class="img_main"
+              src="../../Assets/Story1/main-char.jpg"
+              alt="Main Character"
+            />
+            &nbsp;
+            <img
+              class="img_main"
+              src="../../Assets/Story1/Beatrix.jpg"
+              alt="Beatrix"
+            />
+          </div>
           <!-- 
 ======================================================================================
 DIALOGUE BOX
@@ -44,42 +52,30 @@ DIALOGUE BOX
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 0.5s"
             >
-              BEATRIX: Stop! You don't want to use methods that violate the
-              terms of use. I know you are working on a limited time but there
-              are more ethical ways to finish the task.
+              YOU: I think this is good content, I kinda want to present this to
+              the public now so I can earn money if people click on my videos.
             </p>
-            <!--  -->
             <p
               class="fades_in"
               style="animation: fadeIn 1s ease-in-out forwards 1.5s"
             >
-              *DO YOU STILL WANT TO CONTINUE*
+              BEATRIX: Do that and you might get arrested as this is a violation
+              of FL Studio’s User Agreement. It is a breach of contract
+              therefore, you can be sued for in the worst case and have your
+              license and app revoked in the best.
             </p>
             <!--  -->
           </div>
-          <a href="../Story2/Scene1.0.html">
-            <button
-              class="butt-main"
-              style="
-                animation: fadeIn 2s ease-in-out forwards 2.5s;
-                background-color: green;
-              "
-            >
-              Of course, lol?
-            </button> </a
-          ><a href="./Scene3.0.html">
-            <button
-              class="butt-main"
-              style="
-                animation: fadeIn 2s ease-in-out forwards 2.5s;
-                background-color: crimson;
-              "
-            >
-              Nah, I'm angel?
-            </button>
-          </a>
         </div>
-        <img class="background" src="../../Assets/Story1/badlands.jpg" alt="" />
+        <a href="Scene2.6.html">
+          <button
+            class="butt fades_in"
+            style="animation: fadeIn 2s ease-in-out forwards 3.5s"
+          >
+            >
+          </button>
+        </a>
+        <img class="background" src="../../Assets/Story1/forest.jpg" alt="" />
         <!-- 
 ======================================================================================
 NEXT BUTTON
